--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=your-key-here&libraries=places"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -40,4 +41,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer>
+    
+  </footer> 
 </html>
